--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="jumbotron">
             <div class="content">
                 <h1>Lorem ipsum, dolor sit amet</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima incidunt quos quibusdam at cupiditate modi nobis recusandae in, veniam porro nihil voluptas voluptatem repellat deleniti voluptates a magnam maiores dolorem.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Distinctio atque voluptate ipsa fuga fugiat, explicabo iure voluptatibus soluta natus, ut numquam veniam, iste aliquam non voluptatum. Ad placeat illum explicabo!</p>
             </div>
         </div>
 
@@ -44,7 +44,8 @@
             <div class="section-container">
                 <div class="big-column frog"></div>
                 <div class="small-column">
-                    <h1></h1>
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                    <p>Distinctio atque voluptate ipsa fuga fugiat, explicabo iure voluptatibus soluta natus, ut numquam veniam, iste aliquam non voluptatum.</p>
                 </div>
             </div>
         </section>
@@ -52,7 +53,8 @@
         <section class="fix">
             <div class="section-container">
                 <div class="small-column">
-                    <h1></h1>
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                    <p>Distinctio atque voluptate ipsa fuga fugiat, explicabo iure voluptatibus soluta natus, ut numquam veniam, iste aliquam non voluptatum.</p>
                 </div>
                 <div class="big-column wizard"></div>
             </div>
@@ -62,7 +64,8 @@
             <div class="section-container">
                 <div class="big-column notes"></div>
                 <div class="small-column">
-                    <h1></h1>
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                    <p>Distinctio atque voluptate ipsa fuga fugiat, explicabo iure voluptatibus soluta natus, ut numquam veniam, iste aliquam non voluptatum.</p>
                 </div>
             </div>    
         </section>
@@ -81,7 +84,6 @@
         <section class="fix-second">
             <div class="section-container">
                 <div class="main">Il tuo posto per parlare
-
                 </div>
                 <div class="item square">
                     <div>Prodotto</div>
