refactor: Review code

--- a/index.html
+++ b/index.html
@@ -14,21 +14,24 @@
         <header>
             <div class="top-bar">
                 <div class="content">
-                    <div class="logo-column col">
 
+                    <figure class="logo-column col">
                         <img src="./img/logo.svg" alt="discord">
+                    </figure>
 
-                    </div>
                     <nav class="menu-column col">
                         <ul>
+
                             <li><a href="#" class="white">Scarica</a></li>
                             <li><a href="#" class="white">Perché Discord</a></li>
                             <li><a href="#" class="white">Nitro</a></li>
                             <li><a href="#" class="white">Sicurezza</a></li>
                             <li><a href="#" class="white">Assistenza</a></li>
+
                         </ul>
                     </nav>
                     <div class="login-column col">Accedi</div>
+
                 </div>
             </div>
 
@@ -38,6 +41,7 @@
                     <h1 class="white space">Il tuo posto per parlare</h1>
                     <p class="white space">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                     <div class="ta-c">
+
                         <span>
                             <a href="#" class="button lf"><i class="fa-solid fa-arrow-down"></i>Scarica per Mac</a>
                         </span>
@@ -45,6 +49,7 @@
                         <span>
                             <a href="#" class="button rg">Apri Discord nel tuo browser</a>
                         </span>
+
                     </div>
 
                 </div>
@@ -54,46 +59,51 @@
         <main>
             <section>
                 <div class="section-container">
-                    <div class="big-column">
 
+                    <figure class="big-column">
                         <img src="./img/item1.svg" alt="item1">
+                    </figure>
 
-                    </div>
                     <div class="small-column space">
                         <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                         <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
                     </div>
                 </div>
             </section>
+
             <div class="wave"></div>
             <section class="bg-fix">
                 <div class="section-container">
-                    <div class="small-column space">
+                    
+                    <figure class="small-column space">
 
                         <h2>Dove trovarsi è facile</h2>
                         <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi instantaneamente senza dover chiamare.</p>
 
-                    </div>
-                    <div class="big-column">
-                        <img src="./img/item2.svg" alt="">
-                    </div>
+                    </figure>
+
+                    <figure class="big-column">
+                        <img src="./img/item2.svg" alt="item2">
+                    </figure>
+
                 </div>
             </section>
-
             <div class="wave rotate"></div>
 
             <section>
                 <div class="section-container">
-                    <div class="big-column">
-                        <img src="./img/item3.svg" alt="">
-                    </div>
+
+                    <figure class="big-column">
+                        <img src="./img/item3.svg" alt="item3">
+                    </figure>
+
                     <div class="small-column space">
                         <h2>Da pochi a un fandom</h2>
                         <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
                     </div>
+
                 </div>    
             </section>
-
             <div class="wave"></div>
             
             <section class="bg-fix">
@@ -103,37 +113,47 @@
                         <h2 class="space">Tecnologia affidabile per tenersi in contatto</h2>
                         <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                         <img src="./img/item4-big.svg" alt="">
+
                     </div>
                 </div>
             </section>
+
             <div class=" bg-fix ta-c space vertical">
                 <h4 class="star">Pronto ad iniziare la tua avventura?</h4>
                 <a href="#" class="button-column white"><i class="fa-solid fa-arrow-down"></i>Scarica per Mac</a>
             </div>
+
         </main>
         <!-- Form con informazioni -->
         <footer>
             <div class="footer-top">
                 <div class="mix-column-lx vertical-small">
+
                     <h3 class="purple">Il tuo posto per parlare</h3>
                     <ul>
                         <li class="white">
+
                             <span><img src="./img/ita.png" alt="ita" class="ita"> Italiano <i class="fa-solid fa-arrow-down"></i></span>
+
                         </li>
                         <li class="white">
                             <span>
+
                                 <i class="fa-brands fa-twitter"></i> 
                                 <i class="fa-brands fa-instagram"></i>
                                 <i class="fa-brands fa-facebook-f"></i>
                                 <i class="fa-brands fa-youtube-square"></i>
+
                             </span>
                         </li>
                     </ul>
+
                 </div>
 
                 <div class="mix-column-rx vertical-small">
                     <nav class="mix-column-single">
                         <h4 class="purple">Prodotto</h4>
+
                         <ul>
                             <li class="white">Scarica</li>
                             <li class="white">Perché Discord</li>
@@ -141,47 +161,57 @@
                             <li class="white">Sicurezza</li>
                             <li class="white">Assitenza</li>
                         </ul>
+
                     </nav>
 
                     <nav class="mix-column-single vertical-small">
                         <h4 class="purple">Compagnia</h4>
                         <ul>
+
                             <li class="white">Chi siamo</li>
                             <li class="white">Lavora con noi</li>
                             <li class="white">Marchio</li>
                             <li class="white">Redazione</li>
                             <li class="white">Negozio</li>
+
                         </ul>
                     </nav>
 
                     <nav class="mix-column-single vertical-small">
                         <h4 class="purple">Risorse</h4>
                         <ul>
+
                             <li class="white">Scarica</li>
                             <li class="white">Perché Discord</li>
                             <li class="white">Nitro</li>
                             <li class="white">Sicurezza</li>
                             <li class="white">Assistenza</li>
+
                         </ul>
                     </nav>
 
                     <nav class="mix-column-single vertical-small">
                         <h4 class="purple">Norme</h4>
                         <ul>
+
                             <li class="white">Scarica</li>
                             <li class="white">Perché Discord</li>
                             <li class="white">Nitro</li>
                             <li class="white">Sicurezza</li>
                             <li class="white">Assistenza</li>
+
                         </ul>
                     </nav>
                 </div>
+
             </div>
 
             <div class="footer-bottom">
-                <div class="logo-column">
+
+                <figure class="logo-column">
                     <img src="./img/logo.svg" alt="logo">
-                </div>
+                </figure>
+
                 <div class="button-column white">Registrati</div>
             </div>
         </footer>
